# SU

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  vercel.json
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_tenant.py  003_push_subscriptions.py  004_fix_numero_cnj_unique.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/analytics/: analytics_agent.py
backend/app/agents/audit/: audit_agent.py
backend/app/agents/base/: agent.py  result.py
backend/app/agents/brain/: context.py  orchestrator.py  router.py
backend/app/agents/coding/: coding_agent.py
backend/app/agents/compliance/: compliance_agent.py
backend/app/agents/contract/: contract_agent.py
backend/app/agents/court_monitor/: court_monitor_agent.py
backend/app/agents/crm/: crm_agent.py
backend/app/agents/financial/: financial_agent.py
backend/app/agents/innovation/: innovation_agent.py
backend/app/agents/jurisprudence/: jurisprudence_agent.py
backend/app/agents/marketing/: marketing_agent.py
backend/app/core/: events.py  exceptions.py  middleware.py  security.py  tenant.py
backend/app/db/: base.py  qdrant.py  redis.py
backend/app/integrations/: anthropic_client.py
backend/app/models/: __init__.py  agent_run.py  audit_log.py  client.py  document.py  financial.py  notification.py  process.py  push_subscription.py  tenant.py  user.py
backend/app/rag/: chunker.py  collections.py  embeddings.py  ingestion.py  retrieval.py
backend/app/schemas/: __init__.py  client.py  common.py  financial.py  process.py  user.py
backend/app/services/: email.py  notification_service.py  webpush.py
backend/app/utils/: cnpj_cpf.py  lgpd.py  oab_validator.py  pdf_builder.py
backend/app/workers/: worker.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_clients.py  test_documents.py  test_financial.py  test_health.py  test_processes.py  test_tenant_isolation.py
(+162 files in other folders)
