[tool.poetry]
name = "afj-core-backend"
version = "1.0.0"
description = "AFJ CORE SYSTEM — Backend do Sistema Jurídico Inteligente"
authors = ["AFJ Advogados <dev@afjadvogados.com.br>"]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"
websockets = "^14.0"

# Banco de dados
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"

# Validação e configuração
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"

# Segurança
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
cryptography = "^43.0.3"

# Cache / Filas
redis = {extras = ["hiredis"], version = "^5.2.0"}
celery = {extras = ["redis"], version = "^5.4.0"}

# IA e Agentes
anthropic = ">=0.69.0,<1.0.0"
openai = "^1.57.0"
langgraph = "^0.2.55"
langchain-core = "^0.3.24"
langchain-anthropic = "^0.3.3"
langchain-openai = "^0.2.12"

# RAG / Vetorial
qdrant-client = {extras = ["async"], version = "^1.12.1"}
tiktoken = "^0.8.0"

# Documentos
pdfplumber = "^0.11.4"
pytesseract = "^0.3.13"
Pillow = "^11.0.0"
python-docx = "^1.1.2"
reportlab = "^4.2.5"
weasyprint = "^63.1"

# HTTP / Scraping (para integrações com tribunais)
httpx = {extras = ["http2"], version = "^0.28.0"}
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
playwright = "^1.49.0"

# Utilitários
python-dateutil = "^2.9.0"
pytz = "^2024.2"
structlog = "^24.4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
